# z00z

./: .clippy.toml  .gitignore  AGENTS.md  Cargo-features.md  Cargo.toml  README.md  deep-wiki-readme.md  deny.toml  llm-wiki-readme.md  pack_z00z_project.sh  unpack_z00z_project.sh  versions.yaml  webdriver.json
.cargo/: audit.toml  config.toml
.planning/: GSD-Notes.txt  GSD-Workflow.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE (ref).md  STATE.md  config.json  gsd-help.md
.reviews/: reviewed-advisories.toml
.wiki/: _index.md  config.md  log.md
crates/: z00z-crates-overview.md  z00z-tech-stack-blueprint.md
crates/z00z_core/fuzz/: Cargo.toml
crates/z00z_crypto/fuzz/: Cargo.toml
crates/z00z_networks/rpc/: Cargo.toml  README.md
crates/z00z_networks/rpc/src/: dispatcher.rs  error.rs  lib.rs  local_transport.rs  transport.rs  wasm_client.rs
crates/z00z_networks/rpc/tests/: test_wasm_client_redaction.rs
crates/z00z_runtime/validators/: Cargo.toml  README.md
crates/z00z_runtime/validators/src/: artifact.rs  checkpoint.rs  claim_verify.rs  engine.rs  lib.rs  nullifier.rs  reconcile.rs  spend.rs  tx_verify.rs  verdict.rs
crates/z00z_runtime/validators/tests/: generated_kani_validator_checkpoint_flow.rs  test_hjmt_publication_contract.rs  test_object_policy_verdicts.rs  test_theorem_support.rs
crates/z00z_runtime/watchers/: Cargo.toml  README.md
crates/z00z_runtime/watchers/src/: alerts.rs  censorship.rs  da_health.rs  engine.rs  evidence_export.rs  lib.rs  provider.rs  publication.rs  status.rs
crates/z00z_runtime/watchers/tests/: test_hjmt_publication_contract.rs  test_object_alerts.rs
crates/z00z_simulator/: Cargo.toml  README.md
crates/z00z_simulator/examples/scenario_1/: simulator_interop.rs  simulator_interop_support.inc
crates/z00z_simulator/src/: actors.rs  config.rs  config_accessors.rs  context.rs  design.rs  event.rs  lib.rs  result.rs  rng_mode.rs
crates/z00z_simulator/src/config/: config_defaults.rs
crates/z00z_simulator/src/scenario_1/: claim_pkg_consumer.rs  claim_pkg_store.rs  mod.rs  runner.rs  runner_contract.rs  runner_contract_table.json  runner_verify.rs  runtime_observability.rs  scenario_config.yaml  scenario_design.yaml  scenario_design_orig.yaml
crates/z00z_simulator/src/scenario_1/stage_1/: mod.rs  support.rs
crates/z00z_simulator/src/scenario_1/stage_10/: mod.rs  publish_support.rs  report.rs
crates/z00z_simulator/src/scenario_1/stage_11/: apply.rs  charlie.rs  finish.rs  jmt_wallet_scan.rs  mod.rs
crates/z00z_simulator/src/scenario_1/stage_12/: final_refs.rs  finalize_flow.rs  mod.rs
crates/z00z_simulator/src/scenario_1/stage_13/: hjmt_examples.rs  mod.rs  report.rs  scan.rs  shared_cases.rs  storage.rs  tamper.rs  test_mod.rs
crates/z00z_simulator/src/scenario_1/stage_2/: actors.rs  artifacts.rs  checks.rs  flow.rs  mod.rs  transport.rs
crates/z00z_simulator/src/scenario_1/stage_3/: audit.rs  bins.rs  claim_pkg.rs  distribution.rs  finalize.rs  mod.rs  post_claim.rs  runtime.rs  snapshot.rs  state.rs  wallet_flow.rs  wallet_flow_restart.rs
crates/z00z_simulator/src/scenario_1/stage_4/: claim_paths.rs  mod.rs  publish.rs  storage_view.rs  storage_view_patch.rs
crates/z00z_simulator/src/scenario_1/stage_5/: mod.rs  tx_plan.rs
crates/z00z_simulator/src/scenario_1/stage_6/: bob_flow.rs  input_selection_scan.rs  mod.rs  output_construction.rs  output_construction_balance.rs  paths.rs  persistence.rs  prep_ref.rs  reporting.rs  reports.rs  reports_capture.rs  reports_diff.rs  reports_md.rs  reports_rows.rs  reports_xlsx.rs  shared_cases.rs  sim_pkg_support.rs  test_tx_lane_runtime_suite.rs  tx_lane_impl.rs  tx_lane_runtime.rs  tx_lane_runtime_flow.rs  tx_lane_runtime_suite_support.rs  tx_lane_runtime_support.rs  tx_preparation_core.rs  tx_validation_gates.rs  verifier_support.rs  wallet_state_capture.rs
crates/z00z_simulator/src/scenario_1/stage_7/: mod.rs  transfer_lane_impl.rs  transfer_lane_runtime_support.rs  transfer_lane_support.rs
crates/z00z_simulator/src/scenario_1/stage_8/: assertions.rs  claim_flow.rs  claim_handoff.rs  mod.rs
crates/z00z_simulator/src/scenario_1/stage_9/: bridge_output_router.rs  bundle_lane_impl.rs  demo_checkpoint_agg.rs  exec_input_builder.rs  fragment_construction.rs  logging.rs  mod.rs  prep_snapshot_loader.rs  test_bundle_lane_impl_suite.rs
crates/z00z_simulator/src/scenario_1/support/: checkpoint_shared_cases.rs  claim_shared_cases.rs  cleanup_contract.rs  fixture_cache.rs  mod.rs  scenario_support.rs  stage_runner_support.rs
crates/z00z_simulator/src/scenario_11/: mod.rs  report.rs
crates/z00z_simulator/tests/: test_scenario_11.rs
crates/z00z_simulator/tests/scenario_1/: claim_pkg_crypto.rs  main.rs  output_roots.rs  stage4_bob.rs  stage4_paths.rs  stage4_root.rs  test_architecture_boundaries.rs  test_checkpoint_acceptance.rs  test_claim_acceptance.rs  test_claim_audit_log_integrity.rs  test_claim_conservation.rs  test_claim_crypto.rs  test_claim_emit.rs  test_claim_integration.rs  test_claim_persist.rs  test_claim_pkg_runtime.rs  test_claim_post.rs  test_claim_resume.rs  test_claim_snapshot.rs  test_claim_tx_pipeline.rs  test_e2e_stage4.rs  test_fixture_cache_contract.rs  test_genesis_integration.rs  test_genesis_unit.rs  test_hjmt_e2e.rs  test_hjmt_runtime_config.rs  test_pipeline_genesis_tx.rs  test_s7_examples.rs  test_scenario1_filtered_runs.rs  test_scenario1_object_flows.rs  test_scenario1_spend_gate.rs  test_scenario1_stage_surface.rs  test_scenario1_tx_proof_roundtrip.rs  test_scenario1_unified_gate.rs  test_scenario_settlement.rs  test_stage2_secret_artifacts.rs  test_stage3_nullifier_store.rs  test_stage4_bob_flow.rs  test_stage4_card_gate.rs  test_stage4_cfg_guards.rs  (+25 more)
crates/z00z_simulator/tests/scenario_1/fixtures/: e2e01_fix.json
crates/z00z_storage/fuzz/: Cargo.toml
crates/z00z_storage/fuzz/seeds/settlement_proofs/: 00_settlement_leaf.seed  01_settlement_path.seed  02_fee_envelope.seed  03_proof_envelope.seed  04_occupancy.seed  05_policy_transition.seed  06_split.seed  07_merge.seed  README.md
deploy/: Readme.md
website/: Fonts.txt  (+3 more)
(+3642 files in other folders)
